<resources>
    <string name="app_name">Snap Shop</string>
    <string name="menu_bottomNavigation_products">Products</string>
    <string name="menu_bottomNavigation_cart">Cart</string>
    <string name="fr_productList_loading">Loading</string>
    <string name="fr_productItem_content_description">Item image</string>
    <string name="fr_productDetail_rating_detail">%d rating</string>
    <string name="fr_productDetail_add_to_cart">Add to cart</string>
    <string name="fr_productDetail_snackbar_message">Item added to cart</string>
    <string name="fr_cart_cart_fragment_title">Your cart</string>
    <string name="fr_cart_total_title">Total:</string>
    <string name="ft_cart_empty_cart">Your cart is empty</string>
    <string name="electronics">Electronics</string>
    <string name="jewelry">Jewelry</string>
    <string name="men_s_clothing">Men\'s clothing</string>
    <string name="women_s_clothing">Women\'s clothing</string>
    <string name="menu_bottomNavigation_user">User</string>
    <string name="user_name">User name:</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="city">City:</string>
    <string name="street">Street:</string>
    <string name="zip_code">Zip code:</string>
    <string name="phone">Phone:</string>
    <string name="user_data">User data</string>
    <string name="share">Share</string>
    <string name="filter">Filter products</string>
    <string name="share_text">Look  what I found: %1s %2s %3s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="apply_filter">Apply filters</string>
    <string name="delete_filters">Delete filters</string>
    <string name="frProductDetail_toolbar_title">Product detail</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>